[package]
name = "neuroflow"
version = "0.2.0"

description = "The neural network library implemented in Rust"
repository = "https://github.com/MikhailKravets/NeuroFlow"
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "data-learning", "math", "backpropagation"]
categories = ["algorithms", "science"]
license = "MIT"

authors = ["Mikhail Kravets <michkravets@gmail.com>"]
exclude = ["examples/*", "tests/*"]

[badges]
codecov = { repository = "MikhailKravets/NeuroFlow", branch = "master", service = "github" }

[dependencies]
libm = "0.2.8"
heapless = { version = "0.7.16", features = ["serde"] }
serde = { version = "~1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
time = "0.1"
